# hedssaz-rubik-mosaic-true-solver

./: .gitignore  Cargo.toml  LICENSE  README.md  build-web.ps1
src/: colors.rs  cube.rs  image_map.rs  lib.rs  main.rs  model.rs  solver.rs  wasm.rs
web/: README.md  app.js  cube-sim.js  detail.html  detail.js  index.html  solver.worker.js  styles.css
