[package]
name = "cube1"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
